kubernetes/manifests/network/nginx/configurations/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  # namespace: nginx
  annotations:
    kubernetes.io/ingress.class: nginx  # traefik, nginx
spec:
  ingressClassName: nginx   # traefik, nginx
  rules:
    - host: nginx.localhost
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: nginx
                port:
                  number: 8082
